--- a/2-node.yml
+++ b/2-node.yml
@@ -1,3 +1,5 @@
-p2p:
+links:
   - ["Device-A:Interface-1", "Device-B:Interface-2"]
   - ["Device-A:Interface-2", "Device-B:Interface-1"]
+
+CEOS_IMAGE: veos:latest
