--- a/3-node.yml
+++ b/3-node.yml
@@ -1,4 +1,8 @@
-p2p:
-  - ["Device-A:Ethernet1", "Device-B:Ethernet2"]
-  - ["Device-A:Ethernet2", "Device-C:Ethernet1"]
-  - ["Device-B:Ethernet1", "Device-C:Ethernet2"]
+links:
+  - ["cEOS-1:Ethernet1", "cEOS-2:Ethernet2"]
+  - ["cEOS-1:Ethernet2", "cEOS-3:Ethernet1"]
+  - ["cEOS-2:Ethernet1", "cEOS-3:Ethernet2"]
+
+PREFIX: 3-node-topology
+CONF_DIR: ./config
+CEOS_IMAGE: veos:latest
