--- a/arista-ceos-files/cvp/Dockerfile
+++ b/arista-ceos-files/cvp/Dockerfile
@@ -22,7 +22,7 @@ RUN /tmp/geniso.py  -y /tmp/answers.yaml -p cvpadmin -o /tmp/
 
 # Generate libvirt XML
 RUN /tmp/generateXmlForKvm.py -n cvp \
-    --device-bridge virbr0 --cluster-bridge virbr1 -i /tmp/cvxTemplate.xml -o result.xml \
+    --device-bridge virbr0 -i /tmp/cvxTemplate.xml -o result.xml \
     -x /tmp/disk1.qcow2 -y /tmp/disk2.qcow2 -c /tmp/node1-cvp.iso \
     -b 10240 -p 2 \
     -e /usr/libexec/qemu-kvm 
