--- a/arista-ceos-files/cvp/answers.yaml
+++ b/arista-ceos-files/cvp/answers.yaml
@@ -3,12 +3,15 @@ common:
    default_route: GATEWAY
    dns: [ 8.8.8.8 ]
    ntp: [ 0.fedora.pool.ntp.org, 1.fedora.pool.ntp.org ]
-   device_interface: eth0       # one on which managed devices can reach CVP
+   device_interface: eth1       # one on which managed devices can reach CVP
                                 # This is optional. Defaults to eth0.
 
 node1:
    hostname: cvp.lab
    interfaces:
       eth0:
-         ip_address: IPADDR
-         netmask: NETMASK
+         ip_address: IPADDR_1
+         netmask: NETMASK_1
+      eth1:
+         ip_address: IPADDR_2
+         netmask: NETMASK_2
