Updates to CVP IP assignment

--- a/arista-ceos-files/cvp/Dockerfile
+++ b/arista-ceos-files/cvp/Dockerfile
@@ -19,4 +19,5 @@ COPY entrypoint.sh /
 
 RUN chmod +x /entrypoint.sh
 
-ENTRYPOINT /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["192.168.200.254", "255.255.255.0"]
