v2 done for bridge and macvlan

--- a/arista-ceos-files/examples/2-node.yml
+++ b/arista-ceos-files/examples/2-node.yml
@@ -3,4 +3,4 @@ links:
   - ["Device-A:Interface-2", "Device-B:Interface-1"]
   - ["Device-A:Interface-3", "Device-B:Interface-3", "cvp-1"]
 
-CEOS_IMAGE: veos:latest
+CEOS_IMAGE: ceosimage:latest
