travis ci bug fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ python:
 sudo: false
 
 before_install:
-  - cd networkop/arista-ceos-topo/arista-ceos-files/host/
+  - ls
+  - pwd
+  - cd arista-ceos-topo/arista-ceos-files/host/
   - docker build -t alpine-host .
 install:
   - pip install git+https://github.com/networkop/arista-ceos-topo.git@dev
