--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,20 @@ before_install:
 install:
   - pip install git+https://github.com/networkop/arista-ceos-topo.git@dev
 
-script:
-  - ceos-topo --create --debug test/v1/t1.yml
-  - docker exec -it t1_host-1 sudo ping -c 3 12.12.12.2
-  - ceos-topo --destroy --debug test/v1/t1.yml
+jobs:
+  include:
+    - stage: version 1 testing
+      script:
+        - ceos-topo --create --debug test/v1/t1.yml
+        - docker exec -it t1_host-1 sudo ping -c 3 12.12.12.2
+        - ceos-topo --destroy --debug test/v1/t1.yml
+    - stage: version 2 testing
+      script:
+        - ceos-topo --create --debug test/v2/veth.yml
+        - docker exec -it veth_host1 sudo ping -c 3 12.12.12.2
+        - docker exec -it veth_host1 sudo ping -c 3 13.13.13.3
+        - docker exec -it veth_host3 sudo ping -c 3 23.23.23.2
+        - ceos-topo --destroy --debug test/v2/veth.yml
 
 notifications:
   email: false
