--- a/topo-extra-files/examples/v2/veth.yml
+++ b/topo-extra-files/examples/v2/veth.yml
@@ -3,4 +3,4 @@ CEOS_IMAGE: ceosimage:latest
 PUBLISH_BASE: 9000
 driver: veth
 links:
-  - endpoints: ["host1:e1", "host2:e1"]
+  - endpoints: ["host1:eth1", "host2:eth1"]
