--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - cd ../../
 
 install:
-  - pip install git+https://github.com/networkop/arista-ceos-topo.git@dev
+  - sudo pip install git+https://github.com/networkop/arista-ceos-topo.git@dev
 
 jobs:
   include:
