--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
   include:
     - stage: Version 1 testing
       script:
-        - test/v1/v1-t1.sh
+        - sudo test/v1/v1-t1.sh
     - stage: Version 2 testing
       script:
         - sudo test/v2/v2-t1.sh
