--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,10 @@ jobs:
         - sudo -E python -m pip list
         - sudo PATH=$(dirname `which python`):$PATH python -m pip list
         - sudo -E PATH=$(dirname `which python`):$PATH python -m pip list
-        - sudo -E "PATH=$PATH" test/v1/v1-t1.sh
+        - sudo -E test/v1/v1-t1.sh
     - stage: Version 2 testing
       script:
-        - sudo env "PATH=$PATH"test/v2/v2-t1.sh
+        - sudo -E test/v2/v2-t1.sh
 
 notifications:
   email: false
