--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ before_install:
 
 install:
   - pip install git+https://github.com/networkop/arista-ceos-topo.git@dev
-  - sudo pip install git+https://github.com/networkop/arista-ceos-topo.git@dev
 
 jobs:
   include:
@@ -29,10 +28,10 @@ jobs:
         - sudo -E python -m pip list
         - sudo PATH=$(dirname `which python`):$PATH python -m pip list
         - sudo -E PATH=$(dirname `which python`):$PATH python -m pip list
-        - sudo -E test/v1/v1-t1.sh
+        - sudo env "PATH=$PATH" test/v1/v1-t1.sh
     - stage: Version 2 testing
       script:
-        - sudo -E test/v2/v2-t1.sh
+        - sudo env "PATH=$PATH" test/v2/v2-t1.sh
 
 notifications:
   email: false
