start from eth0

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
       script:
         - sudo env "PATH=$PATH" test/v2/v2-t1.sh
         - sudo env "PATH=$PATH" test/v2/v2-t2.sh
+        - sudo env "PATH=$PATH" test/v2/v2-t3.sh
 
 notifications:
   email: false
