--- a/topo-extra-files/examples/v2/14rtr.yml
+++ b/topo-extra-files/examples/v2/14rtr.yml
@@ -1,89 +1,48 @@
 links:
   - endpoints: ["rtr01:eth0", "rtr02:eth0", "rtr03:eth0", "rtr04:eth0", "rtr05:eth0", "rtr06:eth0", "rtr07:eth0", "rtr08:eth0", "rtr09:eth0", "rtr10:eth0", "rtr11:eth0", "rtr12:eth0", "rtr13:eth0", "rtr14:eth0"]
     driver: bridge
-
-# Create initial configs manually:
-#
-# mkdir config
-# echo "hostname rtr01" > ./config/14rtr_rtr01
-# echo "hostname rtr02" > ./config/14rtr_rtr02
-# echo "hostname rtr03" > ./config/14rtr_rtr03
-# echo "hostname rtr04" > ./config/14rtr_rtr04
-# echo "hostname rtr05" > ./config/14rtr_rtr05
-# echo "hostname rtr06" > ./config/14rtr_rtr06
-# echo "hostname rtr07" > ./config/14rtr_rtr07
-# echo "hostname rtr08" > ./config/14rtr_rtr08
-# echo "hostname rtr09" > ./config/14rtr_rtr09
-# echo "hostname rtr10" > ./config/14rtr_rtr10
-# echo "hostname rtr11" > ./config/14rtr_rtr11
-# echo "hostname rtr12" > ./config/14rtr_rtr12
-# echo "hostname rtr13" > ./config/14rtr_rtr13
-# echo "hostname rtr14" > ./config/14rtr_rtr14
-# docker-topo --create topo-extra-files/examples/v2/3-node.yml
-
-# device 01
   - endpoints: ["rtr01:eth1", "rtr02:eth1"]
   - endpoints: ["rtr01:eth2", "rtr03:eth1"]
   - endpoints: ["rtr01:eth3", "rtr04:eth1"]
   - endpoints: ["rtr01:eth4", "rtr09:eth1"]
-
-# device 02
   - endpoints: ["rtr02:eth1", "rtr01:eth1"]
   - endpoints: ["rtr02:eth2", "rtr03:eth2"]
   - endpoints: ["rtr02:eth3", "rtr04:eth2"]
-
-# device 03
   - endpoints: ["rtr03:eth1", "rtr01:eth2"]
   - endpoints: ["rtr03:eth2", "rtr02:eth2"]
   - endpoints: ["rtr03:eth3", "rtr03:eth3"]
   - endpoints: ["rtr03:eth4", "rtr05:eth1"]
   - endpoints: ["rtr03:eth5", "rtr06:eth1"]
   - endpoints: ["rtr03:eth6", "rtr10:eth1"]
-
-# device 04
   - endpoints: ["rtr04:eth1", "rtr01:eth3"]
   - endpoints: ["rtr04:eth2", "rtr02:eth3"]
   - endpoints: ["rtr04:eth3", "rtr03:eth3"]
   - endpoints: ["rtr04:eth4", "rtr05:eth2"]
   - endpoints: ["rtr04:eth5", "rtr06:eth2"]
-
-# device 05
   - endpoints: ["rtr05:eth1", "rtr03:eth4"]
   - endpoints: ["rtr05:eth2", "rtr04:eth4"]
   - endpoints: ["rtr05:eth3", "rtr06:eth3"]
   - endpoints: ["rtr05:eth4", "rtr07:eth1"]
   - endpoints: ["rtr06:eth5", "rtr11:eth1"]
-
-# device 06
   - endpoints: ["rtr06:eth1", "rtr03:eth5"]
   - endpoints: ["rtr06:eth2", "rtr04:eth5"]
   - endpoints: ["rtr06:eth3", "rtr05:eth3"]
   - endpoints: ["rtr06:eth4", "rtr08:eth1"]
-
-# device 07
   - endpoints: ["rtr07:eth1", "rtr05:eth4"]
   - endpoints: ["rtr07:eth2", "rtr08:eth2"]
   - endpoints: ["rtr07:eth3", "rtr12:eth1"]
-
-# device 08
   - endpoints: ["rtr08:eth1", "rtr06:eth4"]
   - endpoints: ["rtr08:eth2", "rtr07:eth2"]
-
-# device 09
   - endpoints: ["rtr09:eth1", "rtr01:eth4"]
   - endpoints: ["rtr09:eth2", "rtr13:eth1"]
-
-# device 10
   - endpoints: ["rtr10:eth1", "rtr03:eth6"]
   - endpoints: ["rtr10:eth2", "rtr13:eth2"]
-
-# device 11
   - endpoints: ["rtr11:eth1", "rtr05:eth5"]
   - endpoints: ["rtr11:eth2", "rtr14:eth1"]
-
-# device 12
   - endpoints: ["rtr12:eth1", "rtr07:eth3"]
   - endpoints: ["rtr12:eth2", "rtr14:eth2"]
+  - endpoints: ["rtr13:eth1", "rtr07:eth3"]
+  - endpoints: ["rtr13:eth2", "rtr14:eth2"]
 
 VERSION: 2
 driver: veth
