--- a/topo-extra-files/veos/Dockerfile
+++ b/topo-extra-files/veos/Dockerfile
@@ -2,21 +2,15 @@ FROM centos:latest
 
 # Include epel for python-pip and update cache
 RUN yum -y install epel-release && \
-    yum makecache fast
-
-# Install all the dependencies
-## RUN yum update -y \
-RUN yum install -y qemu-kvm bridge-utils iproute libvirt libvirt-client \
-    && yum install -y python-pip openssh genisoimage net-tools \
-    && pip install pyaml \
-    && yum clean all
-
-RUN yum install -y virt-install
+    yum makecache fast && \
+    yum install -y qemu-kvm bridge-utils iproute libvirt libvirt-client genisoimage virt-install && \
+    yum clean all
 
 # Copy the CVP and CVP-tools into the container
 COPY veos.qcow2 /var/lib/libvirt/images/
-COPY aboot.iso /var/lib/libvirt/images/
 COPY entrypoint.sh /
+RUN mkdir -p /mnt/flash
+COPY rc.eos /mnt/flash/rc.eos
 
 RUN chmod +x /entrypoint.sh
 
